# windows-cursor-changer

./: .gitignore  Cargo.toml  README.md  cursor.example.toml  sissy.ani
src/: config.rs  error.rs  info.rs  main.rs  system.rs  window.rs
