[package]
name = "windows-cursor-changer"
version = "0.1.0"
authors = ["Marcus Ball <marcus@marcusball.me>"]
edition = "2018"

[dependencies]
failure = "0.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "processthreadsapi", "handleapi", "psapi"] }
